# MySuperLedger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conf
config/app_demo/: benchmark_0.ini
config/app_ledger/: app_raft_0.ini  app_raft_1.ini  app_raft_2.ini  app_raft_3.ini  benchmark_0.ini
examples/: run_benchmark_backed_by_single_cluster.sh  run_demo_backed_by_single_cluster.sh  run_demo_backed_by_three_nodes_cluster.sh
scripts/: addSubmodules.sh  downloadDependencies.sh  installDependencies.sh
src/app_demo/execution/: IncreaseApplier.cpp
src/app_demo/should_be_generated/app/: App.cpp  App.h
src/app_demo/v2/: MemoryBackedAppStateMachine.h  RocksDBBackedAppStateMachine.h
src/app_ledger/: AppStateMachine.cpp  AppStateMachine.h  CMakeLists.txt
src/app_ledger/execution/: IncreaseApplier.cpp  IncreaseApplier.h  IncreaseHandler.cpp  IncreaseHandler.h
src/app_ledger/should_be_generated/app/: App.cpp  App.h  Main.cpp  RequestReceiver.cpp  RequestReceiver.h
src/app_ledger/should_be_generated/app/calldatas/: ConfigureAccountMetadataCallData.cpp  CreateAccountCallData.cpp  RecordJournalEntryCallData.cpp  RequestCallData.h
src/app_ledger/should_be_generated/domain/: Account.h  AccountMetadata.h  AccountType.cpp  AccountType.h  AccountTypeUtil.cpp  Amount.h  Balance.h  BusinessCode.h  CommandDecoderImpl.cpp  CommandDecoderImpl.h  CommandProcessLoop.h  CommandProcessLoop.hpp  EventDecoderImpl.cpp  EventDecoderImpl.h  IncreaseCommand.cpp  IncreaseCommand.h  JournalEntry.h  JournalLine.h  ProcessedEvent.cpp  ProcessedEvent.h  TransactionType.h  TransactionTypeUtil.cpp  common_types.h
src/app_ledger/should_be_generated/domain/commands/: ConfigureAccountMetadataCommand.cpp  ConfigureAccountMetadataCommand.h  CreateAccountCommand.cpp  CreateAccountCommand.h  RecordJournalEntryCommand.cpp  RecordJournalEntryCommand.h
src/app_ledger/should_be_generated/domain/events/: AccountCreatedEvent.cpp  AccountCreatedEvent.h  AccountMetadataConfiguredEvent.cpp  AccountMetadataConfiguredEvent.h  JournalEntryRecordedEvent.cpp  JournalEntryRecordedEvent.h
src/app_ledger/should_be_generated/domain/post/: BundleExposePublisher.cpp  BundleExposePublisher.h
src/app_ledger/should_be_generated/domain/protos/: ledger.proto  publishEvents.proto
src/app_ledger/v2/: AppStateMachine.cpp  AppStateMachine.h  MemoryBackedAppStateMachine.h  RocksDBBackedAppStateMachine.cpp  RocksDBBackedAppStateMachine.h
src/app_util/: CMakeLists.txt  CommandProcessLoop.h
src/app_util/control/split/: SplitCommand.cpp
src/app_util/protos/: scale.proto
src/infra/: CMakeLists.txt  common_types.h
src/infra/raft/storage/: SegmentLog.h
src/infra/raft/v2/: RaftService.h
src/infra/util/: FileUtil.cpp  HttpCode.h  MemoryPool.h
test/: CMakeLists.txt
test/app_ledger/: AppStateMachineTest.cpp
test/app_ledger/config/: app.ini  raft_0.ini
test/app_ledger/data/rocksdb/: IDENTITY  LOG  MANIFEST-000004  OPTIONS-000008
test/infra/es/: ReadonlyCommandEventStoreMock.h
